@@ -1,4 +1,4 @@
-SUBDIRS = log4cpp testCategory testNDC
+SUBDIRS = log4cpp log4cppDLL testCategory testDLL testNDC testNTEventLog testPattern
 
 EXTRA_DIST = msvc6.dsw NTEventLogCategories.mc
 
